# pdforge-generate-pdf-component

./: .gitignore  Cargo.toml  README.md  edgee-component.toml  pdforge-generate-pdf.wasm
.github/workflows/: check.yml  wasm-build-release.yml
src/: helpers.rs  lib.rs  pdforge_payload.rs
src/helpers/: body.rs  mod.rs
