[package]
name = "pdforge-generate-pdf-component"
version = "1.0.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.86"
url = "2.5.4"
wit-bindgen = "0.43.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
waki = "0.5.1"
base64 = "0.22.1"
urlencoding = "2.1.3"

[dev-dependencies]
pretty_assertions = "1.4.1"
uuid = { version = "1.10.0", features = ["v4"] }
